--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-modal": "^3.11.2",
-    "react-scripts": "3.4.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.4",
     "uuid": "^8.3.0"
   },
   "scripts": {
